@@ -1622,3 +1622,14 @@ config DS_LIB_libz
 		portable across platforms.
 		
 		In DS-Mod, e.g. Tor, Bftpd and Stunnel depend on zlib.
+
+config DS_LIB_libelf
+	bool "libelf - ELF object file access library (UNTESTED)"
+	default n
+	help
+		libelf - ELF object file access library
+
+		libelf-0.8.5 is a free ELF object file access library.
+		http://www.stud.uni-hannover.de/~michael/software/
+
+		In DS-Mod, e.g ltrace depends on libelf.
